--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,5 +1,5 @@
 // Заголовки, общие БЄМ блоки и проче...
-button {
+.button {
 	padding-top: rem(13);
 	padding-bottom: rem(13);
 	background: $maingreen;
