--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,18 +1,236 @@
 //====================================================================================================
+.header {
+	border: 1px solid #EEEEEE;
+	// .header__container
+
+	&__container {
+		display: flex;
+		align-items: center;
+		//flex-wrap: wrap;
+	}
+
+	// .header__logo
+
+	&__logo {
+		img {
+			max-width: 100%;
+			height: auto;
+		}
+		position: relative;
+		z-index: 6;
+		padding: 38px 0px;
+		margin-right: rem(30);
+		@media (max-width:$tablet){
+			margin-right: rem(45);
+		}
+		@media (max-width:$mobile){
+			padding: 30px 0px;
+			order: 0;
+			//margin: 0px 30px 0px 30px;
+			@include adaptiveValue("margin-left", 30, 5,375,320,1);
+			@include adaptiveValue("margin-right", 30, 5,375,320,1);
+	  }
+	}
+
+	&__table-button {
+		flex: 1 1 auto;
+		@media (max-width:$mobile){
+			 order: -1; 
+		}
+	}
+	// .header__city
+
+	&__city {
+		position: relative;
+		z-index: 5;
+		flex: 1 1 auto;
+		padding-left: rem(27);
+		background: url(../img/header/placeholder\ 1.svg) left no-repeat;
+		font-size: rem(16);
+		line-height: math.div(22 , 16);
+		@media (max-width:$tablet){
+			@include adaptiveValue("margin-right", 40, 20);
+		}
+		@media (max-width:$mobile){
+			 display: none; 
+		}
+	}
+
+	// .header__actions
+
+	&__actions {
+		display: flex;
+		align-items: center;
+		position: relative;
+		z-index: 5;
+	}
+
+	// .header__menu
+
+	&__menu {
+		display: flex;
+		align-items: center;
+		@media (max-width:$tablet){
+			flex: 1 1 auto;
+		}
+	}
+
+	// .header__button
+
+	&__button {
+		color: white;
+		background: $mainColor;
+		padding: 9px 31.5px;
+		font-size: rem(16);
+		margin-right: rem(20);
+		@media (max-width:$tablet){
+			margin-right: 0;
+			position: relative;
+			z-index: 5;
+			padding: 9px 25.5px;
+		}
+	}
+
+	// .header__lang
+
+	&__lang {
+		display: flex;
+		align-items: center;
+		column-gap: rem(10);
+		span {
+			font-size: rem(16);
+			text-decoration-line: underline;
+			line-height: 1.5;
+		}
+		@media (max-width:$tablet){
+			display: none;
+		}
+	}
+
+	&__cart {
+		display: none;
+		@media (max-width:$mobile){
+			position: relative;
+			  display: block;
+			  margin-left: rem(30);
+			  position: relative;
+			  z-index: 5;
+			  &::after{
+				content:'';
+				position: absolute;
+				top: 10%;
+				right: -5%;
+				width: 10px;
+				height: 10px;
+				border-radius: 50%;
+				background: #EB5757;
+			  }
+		}
+	}
+}
+.menu {
+
+	// .menu__icon
+
+	&__icon {
+	}
+
+	// .menu__body
+
+	&__body {
+		@media (max-width:$tablet){
+			position: fixed;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: -100%;
+			overflow: auto;
+			background: rgb(255, 255, 255);
+			padding: rem(112) rem(10) rem(50) rem(10);
+			transition: left 0.6s ease 0s;
+			z-index: 4;
+			&::before {
+				content: "";
+				position: fixed;
+				border-bottom: 1px solid #EEEEEE;;
+				//display: block;
+				width: 100%;
+				height: 96px;
+				left: -100%;
+				top: 0px;
+				background-color: rgb(255, 255, 255);
+				transition: left 0.6s ease 0s;
+			}
+			
+			.menu-open & {
+				left: 0;
+				&::before {
+					left: 0;
+				};
+			}
+		}
+	}
+
+	// .menu__list
+
+	&__list {
+		display: flex;
+		align-items: center;
+		@media (max-width:$tablet){
+			flex-direction: column;
+			row-gap: rem(30);
+			// &::before{
+			// 	content:'';
+			// 	position: fixed;
+			// 	width: 100%;
+			// 	height: 57px;
+			// 	left: -100%;
+			// 	top: 0;
+			// 	background-color: #fff;
+			// }
+		}
+	}
+
+	// .menu__item
+
+	&__item {
+		@include adaptiveValue("margin-right", 30, 20,1920,1024,1);
+		line-height: 1.4;
+		font-size: rem(16);
+		
+		@media (max-width:$tablet){
+			font-size: rem(24);
+		}
+	}
+
+	// .menu__link
+
+	&__link {
+		transition: color 0.3s;
+		&:hover{
+			color: $maingreen;
+			text-decoration: underline;
+		}
+	}
+}
+.icon-menu {
+}
+.lang {
+}
 
 //====================================================================================================
 
 //Burger
-/*
+
 .icon-menu {
 	display: none;
-	@media (max-width: $mobile) {
+	@media (max-width: $tablet) {
 		display: block;
 		position: relative;
-		width: rem(30);
-		height: rem(18);
+		width: rem(35);
+		height: rem(25);
 		cursor: pointer;
-		z-index: 5;
+		z-index: 7;
 		span,
 		&::before,
 		&::after {
@@ -21,7 +239,7 @@
 			right: 0;
 			position: absolute;
 			width: 100%;
-			height: rem(2);
+			height: rem(3);
 			background-color: #000;
 		}
 		&::before {
@@ -51,4 +269,4 @@
 		}
 	}
 }
-*/
+
