--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,3 +1,47 @@
 //====================================================================================================
+.footer {
+
+	// .footer__container
+
+	&__container {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		@media (max-width:$tablet){
+			justify-content: center;
+		}
+	}
+
+	// .footer__content
+
+	&__content {
+		font-size: rem(16);
+		line-height: 1.5;
+		span {
+			font-weight: 300;
+		}
+		@media (max-width:$tablet){
+			display: none;
+		}
+	}
+
+	// .footer__social
+
+	&__social {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		gap: rem(10);
+		padding: 40px 0px;
+		@media (max-width:$tablet){
+			padding: 35px 0px;
+		}
+	}
+
+	// .footer__link
+
+	&__link {
+	}
+}
 
 //====================================================================================================
