--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -2,7 +2,12 @@
 .header {
 	border: 1px solid #EEEEEE;
 	// .header__container
-
+	@media (max-width:$mobile){
+	height: rem(83);
+	@media (max-width:$mobileSmall){
+		height: rem(75); 
+  }
+	}
 	&__container {
 		display: flex;
 		align-items: center;
@@ -18,13 +23,13 @@
 		}
 		position: relative;
 		z-index: 6;
-		padding: 38px 0px;
+		padding: 41px 0px;
 		margin-right: rem(30);
 		@media (max-width:$tablet){
 			margin-right: rem(45);
 		}
 		@media (max-width:$mobile){
-			padding: 30px 0px;
+			padding: 23.5px 0px;
 			order: 0;
 			//margin: 0px 30px 0px 30px;
 			@include adaptiveValue("margin-left", 30, 5,375,320,1);
@@ -146,7 +151,7 @@
 			left: -100%;
 			overflow: auto;
 			background: rgb(255, 255, 255);
-			padding: rem(112) rem(10) rem(50) rem(10);
+			padding: rem(125) rem(10) rem(50) rem(10);
 			transition: left 0.6s ease 0s;
 			z-index: 4;
 			&::before {
@@ -155,11 +160,17 @@
 				border-bottom: 1px solid #EEEEEE;;
 				//display: block;
 				width: 100%;
-				height: 96px;
 				left: -100%;
 				top: 0px;
 				background-color: rgb(255, 255, 255);
 				transition: left 0.6s ease 0s;
+				height: 120px;
+				@media (max-width:$mobile){
+					 height: 83px; 
+				}
+				@media (max-width:$mobileSmall){
+					 height: rem(75); 
+				}
 			}
 			
 			.menu-open & {
@@ -217,6 +228,119 @@
 }
 .lang {
 }
+
+.header {
+
+	// .header__country
+
+	&__country {
+	}
+
+	// .header__city-block
+
+	&__city-block {
+		position: relative;
+		display: flex;
+		align-items: center;
+	}
+
+	// .header__city
+
+	// &__city {
+	// }
+
+	// .header__city-questions
+
+	&__city-questions {
+		position: absolute;
+		background: white;
+		top: 300%;
+		left: 0;
+		z-index: 7;
+		padding: 20px 30px;
+		border: 1px solid #EEEEEE;
+		box-shadow: 0px 8px 20px rgba(9, 47, 51, 0.08);
+		border-radius: 2px;
+		transition: all 0.3s;
+		visibility: hidden;
+		pointer-events: none;
+		opacity: 0;
+		 &._active {
+			top: 200%;
+			visibility: visible;
+			opacity: 1;
+			pointer-events: initial;
+		}
+		&::before{
+			content:'';
+			///width: 0;
+			//height: 0;
+			//display: block;
+			position: absolute;
+			z-index: 10;
+			//border: 1px solid rgb(255, 255, 255);
+			left: 50px;
+			// border-left: 10px solid transparent;
+			// border-right: 10px solid transparent;
+			// border-bottom: 10px solid #EEEEEE;
+			border-left: 10px solid rgba(113, 101, 58, 0);
+				border-right: 10px solid rgba(113, 101, 58, 0);
+				 	border-bottom: 10px solid #eee;
+			top: -10px;
+		}
+		&::after{
+			content:'';
+			position: absolute;
+			top: -9px;
+			left: 50px;
+			
+			z-index: 10;
+			// border-left: 10px solid #EEEEEE; 	
+			// border-right: 10px solid #EEEEEE; 	
+			// border-bottom: 10px solid #fff;
+			border-left: 10px solid rgba(255, 241, 190, 0); 
+				border-right: 10px solid rgba(255, 241, 190, 0); 	
+				border-bottom: 10px solid #fff;
+		}
+	}
+}
+.city-questions {
+
+	// .city-questions__question
+
+	&__question {
+		line-height: 1.4;
+		margin-bottom: rem(15);
+	}
+
+	// .city-questions__buttons
+
+	&__buttons {
+		display: flex;
+		gap: rem(10);
+	}
+
+	// .city-questions__button
+
+	&__button {
+		
+		border: 1px solid #092F33;
+		border-radius: 2px;
+		font-weight: 500;
+		@include adaptiveValue("font-size", 18, 14);
+		line-height: 1.5;
+		width: 113px;
+		text-align: center;
+		padding: 5px 0px;
+		transition: all 0.3s;
+		&:hover{
+			background: $mainColor;
+			color: white;
+		}
+	}
+}
+
+
 
 //====================================================================================================
 
