--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -4,7 +4,10 @@
 	// .page__main-block
 
 	&__main-block {
-		
+		overflow: hidden;
+		@media (min-width:$mobile){
+			 display: flex; 
+		}
 	}
 }
 .main-block {
@@ -13,13 +16,29 @@
 
 	&__container {
 		display: flex;
-		}
+		align-items: center;
+	}
 
 	// .main-block__content
 
+	&__body {
+		//padding: 50px 0px 50px 0px;
+		@include adaptiveValue("padding-top", 280, 115,1920,1024,1);
+		@media (min-width:$mobile){
+			 //padding: 50px 20px 50px 0px;
+			 width: 68%;
+			 padding-right: 10px;
+		}
+	}
+
 	&__content {
-		@include adaptiveValue("margin-top", 280, 115,1920,1024,1);
-		margin-right: -185px;
+		// @include adaptiveValue("margin-top", 280, 115,1920,1024,1);
+		// margin-right: -185px;
+		flex: 0 0 100%; 
+		//display: flex;
+		@media (min-width:$mobile){
+			 
+		}
 	}
 
 	// .main-block__pretitle
@@ -82,14 +101,30 @@
 	// .main-block__img
 
 	&__img {
-		flex: 0 0 percent(950, 1920);
-		position:relative;
-		div {
-			position:absolute;
+		@media (min-width:$mobile){
+		position: relative;
+		//flex: 0 0 calc(((100vw - 32px) * 0.32) + 16px);
+		padding: 0 0 47.969% 0;
+		transform: translate(-100%, 0px);
 		}
+		// flex: 0 0 percent(950, 1920);
+		// position:relative;
+		
 		img {
-			max-width: 49.48vw;
-			height: auto;
+			max-width: 100%;
+			@media (min-width:$mobile){
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				top: 0;
+				left: 0;
+				object-fit: cover; 
+			}
+		}
+		flex: 0 0 calc(50vw - 10px);
+		@media (min-width:1212px){
+			//flex: 0 0 calc(50vw - (0.68 - 0.5) * 1180px);
+			
 		}
 	}
 }
