--- a/src/scss/base/forms/range.scss
+++ b/src/scss/base/forms/range.scss
@@ -80,13 +80,15 @@
 /* Slider size and handle placement;
  */
 .noUi-horizontal {
-	height: 18px;
+	height: 2px;
 }
 .noUi-horizontal .noUi-handle {
-	width: 34px;
-	height: 28px;
+	width: 16px;
+	height: 16px;
+	border-radius: 50%;
+	border: 2px solid $maingreen;
 	right: -17px;
-	top: -6px;
+	top: -7px;
 }
 .noUi-vertical {
 	width: 18px;
@@ -105,16 +107,16 @@
  * Giving the connect element a border radius causes issues with using transform: scale
  */
 .noUi-target {
-	background: #fafafa;
+	background: #E0E0E0;
 	border-radius: 4px;
-	border: 1px solid #d3d3d3;
-	box-shadow: inset 0 1px 1px #f0f0f0, 0 3px 6px -5px #bbb;
+	//border: 1px solid #d3d3d3;
+	//box-shadow: inset 0 1px 1px #f0f0f0, 0 3px 6px -5px #bbb;
 }
 .noUi-connects {
 	border-radius: 3px;
 }
 .noUi-connect {
-	background: #3fb8af;
+	background: $maingreen;
 }
 /* Handles and cursors;
  */
@@ -125,6 +127,7 @@
 	cursor: ns-resize;
 }
 .noUi-handle {
+	//position: relative;
 	border: 1px solid #d9d9d9;
 	border-radius: 3px;
 	background: #fff;
@@ -141,15 +144,18 @@
 	content: "";
 	display: block;
 	position: absolute;
-	height: 14px;
-	width: 1px;
-	background: #e8e7e6;
-	left: 14px;
-	top: 6px;
+	height: 24px;
+	width: 24px;
+	background: #D6EFE6;
+	border-radius: 50%;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	z-index: -1;
 }
-.noUi-handle:after {
-	left: 17px;
-}
+// .noUi-handle:after {
+// 	left: 17px;
+// }
 .noUi-vertical .noUi-handle:before,
 .noUi-vertical .noUi-handle:after {
 	width: 14px;
@@ -263,18 +269,52 @@
 .noUi-tooltip {
 	display: block;
 	position: absolute;
-	border: 1px solid #d9d9d9;
-	border-radius: 3px;
+	border: 1px solid #E0E0E0;
+	border-radius: 1px;
 	background: #fff;
 	color: #000;
-	padding: 5px;
+	padding: 5px 9px;
 	text-align: center;
 	white-space: nowrap;
+	font-size: 16px;
+	margin-top: -4px;
+	&::before{
+		content:'';
+		///width: 0;
+		//height: 0;
+		//display: block;
+		position: absolute;
+		z-index: 10;
+		//border: 1px solid rgb(255, 255, 255);
+		left: 50%;
+		transform: translate(-50%) rotate(180deg);
+		// border-left: 10px solid transparent;
+		// border-right: 10px solid transparent;
+		// border-bottom: 10px solid #EEEEEE;
+		border-left: 6px solid rgba(113, 101, 58, 0);
+			border-right: 6px solid rgba(113, 101, 58, 0);
+				 border-bottom: 4px solid #e0e0e0;
+		top: 26px;
+	}
+	&::after{
+		content:'';
+		position: absolute;
+		top: 25px;
+		left: 50%;
+		transform: translate(-50%) rotate(180deg);
+		z-index: 10;
+		// border-left: 10px solid #EEEEEE; 	
+		// border-right: 10px solid #EEEEEE; 	
+		// border-bottom: 10px solid #fff;
+		border-left: 6px solid rgba(255, 241, 190, 0); 
+			border-right: 6px solid rgba(255, 241, 190, 0); 	
+			border-bottom: 4px solid #fff;
+	}
 }
 .noUi-horizontal .noUi-tooltip {
 	transform: translate(-50%, 0);
 	left: 50%;
-	bottom: 120%;
+	bottom: 190%;
 }
 .noUi-vertical .noUi-tooltip {
 	transform: translate(0, -50%);
