--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -891,7 +891,8 @@
 			//top: 100%;
 			bottom: 0;
 			width: 100%;
-			height: 77.033%;
+			//height: 77.033%;
+			@include adaptiveValue("height", 493, 435,1920,1024,1);
 			background: #924646;
 			//z-index: 3;
 		}
@@ -914,16 +915,6 @@
 		}
 	}
 
-	&__bg {
-		background: #b44747;
-		//position: relative;
-		z-index: 0;
-		position: absolute;
-		 	top: 0;
-		 	left: 0;
-		 	width: 100%;
-		 	height: 100%;
-	}
 
 	// .bastsale__container
 
@@ -992,8 +983,10 @@
 			transform: translate(-100%, 0px);
 			//}
 		@media (max-width: em(1386)){
-			transform: translate(-60%, 0px);
-			
+			//transform: translate(-60%, 0px);
+			flex:0 0 36.23%;
+			padding-bottom: 45%;
+			//display: none;
 		}
 			
 			img {
@@ -1008,6 +1001,16 @@
 					left: 0;
 					bottom: 0;
 					object-fit: cover; 
+				}
+				@media (max-width: em(1386)){
+					  &:first-child{
+						display: none;
+					  }
+				}
+				@media (min-width:em(1386)){
+					&:last-child{
+						display: none;
+					}
 				}
 			}
 			//flex: 0 0 calc(50vw - 10px);
